[package]
name = "tts-cli"
version = "0.1.3"
edition = "2021"
description = "Command line utility to automatically read from clipboard."
repository = "https://github.com/lesleyrs/tts-cli"
license = "MIT OR Apache-2.0"
keywords = ["tts", "text-to-speech", "cli", "clipboard", "narrator"]
categories = ["accessibility", "command-line-utilities", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["11"]
9 = ["tts/speech_dispatcher_0_9"]
10 = ["tts/speech_dispatcher_0_10"]
11 = ["tts/speech_dispatcher_0_11"]

[dependencies]
arboard = "3.2.0"
owo-colors = "3.5.0"
tts = { version = "0.25.5", default-features = false }

[[bin]]
name = "tts"
path = "src/main.rs"
